# Tempo-rs

./: .gitignore  Cargo.toml  Kodefranicho7z.7z  test  test1  test2  test_skip_4096_sens_0.7  test_stft
KodeOpdateret/: main.rs  rgb.rs
Songs/: Basicbeat120.txt  Daft Punk - Da Funk.txt  busybeat100.txt
Tempo/: Cargo.toml  test  test_skip_2048  test_skip_4096
Tempo/Songs/: Basicbeat120-1.wav.asd  Basicbeat120.txt  Basicbeat120.wav.asd  busybeat100-1.wav.asd  busybeat100.wav.asd
Tempo/src/: main.rs  sound_file.rs
src/: dmx.rs  main.rs  rgb.rs  sound_file.rs  util.rs
