[package]
name = "tempo"
version = "0.1.0"
authors = ["Fredemus <frederik.halkjaer1@gmail.com>"]
edition = "2018"

[dependencies]
hound = "3.4.0"
byteorder = "1.3.2"
cpal = { git = "https://github.com/RustAudio/cpal" }
anyhow = "1.0.18"
# rppal = "0.11.3"
# termios = "0.3.1"
rustfft = "3.0.0"
num-complex = "0.2.3"
num-traits = "0.2.9"
basic_dsp_vector = "0.8.1"
num = "0.2.0"
filters = "0.3.0"